...
    <string name="coin_exchange">Coin Exchange</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="map">Map</string>
    <string name="value_in_gold">Offered gold for crypto:\n0.0</string>
    <string name="cryptoEditTextHint">Amount to exchange…</string>
    <string name="cancel">Cancel</string>
    <string name="accept_trade">Accept Trade</string>
    <string name="exchange_crypto_title">Exchange Gold with Bank</string>
    <string name="remaining_gold_to_trade">Remaining crypto bank will accept today:\n25.0</string>
    <string name="exhange_rate_text">Exchange rate:\n0.0</string>
    <string name="create_username">Create username</string>
    <string name="create_a_username">Create a username</string>
    <string name="new_user_username">New users must create a username in order to gift coins.</string>
...
    <string name="change_username">Change username</string>
    <string name="gift_coins">Gift coins</string>
    <string name="your_username_is">Your username is:\n</string>
    <string name="recipients_username">Recipients username…</string>
    <string name="amount_to_gift">Amount to gift…</string>
    <string name="recipent_not_found">Recipients username not found in database</string>
    <string name="send_gift">Send gift</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
...
    <string name="your_gold">Your gold</string>
    <string name="you">You</string>
    <string name="top_10">Top 10</string>
    <string name="new_user_username_leaderboard">New users must create a username in order to view the leaderboard.</string>
    <string name="user_location_permission_explanation">Need permission for fine location for calculating distance to coins, and displaying position on map.</string>
    <string-array name="crypto_array">
        <item>PENY</item>
        <item>DOLR</item>
        <item>SHIL</item>
        <item>QUID</item>
    </string-array>
</resources>

